Change css keyframes rule which controls blinking cursor display, from using border styles to using opacity styles to control the cursor visibility, in order to fix a bug preventing blink animation by using a broader property type

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,14 +160,12 @@ button {
     animation: blink 1s step-start infinite;
 }
 
-@keyframes blink-cursor {
-    0%, 50% {
-        /* cursor visible */
-        border-color: black; 
+@keyframes blink {
+    0%, 49% {
+        opacity: 1;
     }
-    51%, 100% {
-        /* cursor hidden */
-        border-color: transparent;
+    50%, 100% {
+        opacity: 0;
     }
 }
 
